# HB

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  homeboy.json
docs/: architecture.md  changelog.md  cli-reference.md  cross-compilation.md  index.md  templates.md
docs/architecture/: api-client.md  embedded-docs-topic-resolution.md  execution-context.md  hooks.md  keychain-secrets.md  output-system.md  release-pipeline.md  ssh-key-management.md
docs/cli/: homeboy-root-command.md
docs/commands/: api.md  audit.md  auth.md  build.md  changelog.md  changes.md  cleanup.md  commands-index.md  component.md  config.md  db.md  deploy.md  docs.md  extension.md  file.md  fleet.md  git.md  init.md  lint.md  list.md  logs.md  project.md  refactor.md  release.md  server.md  ssh.md  test.md  upgrade.md  version.md
docs/developer-guide/: architecture-overview.md  config-directory.md  error-handling.md
docs/documentation/: alignment.md  generation.md  index.md  structure.md
docs/schemas/: component-schema.md  extension-manifest-schema.md  fleet-schema.md  portable-config.md  project-schema.md  server-schema.md
skills/homeboy/: SKILL.md
tests/: output_errors.rs
