[package]
name = "homeboy"
version = "0.56.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "CLI for multi-component deployment and development workflow automation"
repository = "https://github.com/Extra-Chill/homeboy"
homepage = "https://github.com/Extra-Chill/homeboy"
build = "build.rs"

[lib]
name = "homeboy"
path = "src/lib.rs"

[[bin]]
name = "homeboy"
path = "src/main.rs"

[dependencies]
# Core library dependencies
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
shellexpand = "3.1"
regex = "1.11"
glob-match = "0.2"
glob = "0.3"
zip = "0.6"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
arboard = "3"
chrono = "0.4"
semver = "1.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "string"] }
toml = "1.0.3"

[dev-dependencies]
tempfile = "3.14"

[profile.dist]
inherits = "release"
lto = "thin"
